--- a/index.html
+++ b/index.html
@@ -14,118 +14,148 @@
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div class="container">
         <!--Header--> 
-        <header>
-        <nav>
-            <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
-            <ul class="list">
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="">Portfolio</a></li>
-                <li><a class="link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="contacts">
-            <ul class="contacts-list list">
-                <li><a class="link" href="mailto: info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="link" href="tel: 110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+        <header class="page-header">
+            <div class="container-header">
+                <nav class="navigation">
+                    <a class="logo" href="./index.html">WEB<span class="logo-span">STUDIO</span></a>
+                    <ul class="menu">
+                        <li><a class="link" href="./index.html">Studio</a></li>
+                        <li><a class="link" href="">Portfolio</a></li>
+                        <li><a class="link" href="">Contacts</a></li>
+                    </ul>
+                </nav>
+                <address class="contacts">
+                    <ul class="contacts-list list">
+                        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="link" href="tel:110001111111">+11 (000) 111-11-11</a></li>
+                    </ul>
+                </address>
+            </div>
         </header>
         <main>
             <!--Section HERO-->
-            <section class="section hero">
-                <h1 class="title">Effective Solutions for Your Business</h1>
-                <button type="button" class="knob">Order Service</button>
-            </section>
-            <!--Section Studio Descriptions--> 
-            <section class="section">
-                <h2 class="hidden">Tittle</h2>
-                <ul class="list">
-                    <li>
-                        <h3 class="list-title">Strategy</h3>
-                        <p class="list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
-                    </li>
-                    <li>
-                        <h3 class="list-title">Punctuality</h3>
-                        <p class="list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                    </li>
-                    <li>
-                        <h3 class="list-title">Diligence</h3>
-                        <p class="list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                    </li>
-                    <li>
-                        <h3 class="list-title">Technologies</h3>
-                        <p class="list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                    </li>
-                </ul>
-            </section>
-            <!--Section "Our team"-->
-            <section class="section-team section">
-                <h2 class="section-tittle">Our Team</h2>
-                <ul class="list">
-                    <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
-                        <h3 class="list-title">Mark Guerrero</h3>
-                        <p class="list-description">Product Designer</p>
-                    </li>
-                    <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
-                        <h3 class="list-title">Tom Ford</h3>
-                        <p class="list-description">Frontend Developer</p>
-                    </li>
-                    <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
-                        <h3 class="list-title">Camila Garcia</h3>
-                        <p class="list-description">Marketing</p>
-                    </li>
-                    <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
-                        <h3 class="list-title">Daniel Wilson</h3>
-                        <p class="list-description">UI Designer</p>
-                    </li>
-                </ul>
-            </section>
-            <!--Section Portfolio-->
-            <section class="section">
-                <h2 class="section-tittle">Our Portfolio</h2>
-                <ul class="list">
-                    <li>
-                        <img src="./images/app.jpg" alt="Banking App" width="360">
-                        <h3 class="list-title">Banking App</h3>
-                        <p class="list-description">App</p>
-                    </li>
-                    <li>
-                        <img src="./images/cashless.jpg" alt="Cashless Payment" width="360">
-                        <h3 class="list-title">Cashless Payment</h3>
-                        <p class="list-description">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/meditation.jpg" alt="Meditation App" width="360">
-                        <h3 class="list-title">Meditation App</h3>
-                        <p class="list-description">App</p>
-                    </li>
-                    <li>
-                        <img src="./images/taxi.jpg" alt="Taxi Service" width="360">
-                        <h3 class="list-title">Taxi Service</h3>
-                        <p class="list-description">Marketing</p>
-                    </li>
-                    <li>
-                        <img src="./images/screen.jpg" alt="Screen Illustrations" width="360">
-                        <h3 class="list-title">Screen Illustrations</h3>
-                        <p class="list-description">Design</p>
-                    </li>
-                    <li>
-                        <img src="./images/courses.jpg" alt="Online Courses" width="360">
-                        <h3 class="list-title">Online Courses</h3>
-                        <p class="list-description">Marketing</p>
-                    </li>
-                </ul>
-            </section>
+            <div class="container">
+                <section class="section hero">
+                    <h1 class="title">Effective Solutions for Your Business</h1>
+                    <button type="button" class="knob">Order Service</button>
+                </section>
+            </div>
+            <!--Section-2 Studio Descriptions--> 
+            <div class="container">
+                <section class="section-2">
+                    <h2 class="hidden">Tittle</h2>
+                    <ul class="section-2-list">
+                        <li class="section-2-list-item">
+                            <h3 class="list-title">Strategy</h3>
+                            <p class="list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+                        </li>
+                        <li class="section-2-list-item">
+                            <h3 class="list-title">Punctuality</h3>
+                            <p class="list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        </li>
+                        <li class="section-2-list-item">
+                            <h3 class="list-title">Diligence</h3>
+                            <p class="list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        </li>
+                        <li class="section-2-list-item">
+                            <h3 class="list-title">Technologies</h3>
+                            <p class="list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <!--Section-3 "Our team"-->
+            <div class="container">
+                <section class="section-team">
+                    <h2 class="section-3-tittle">Our Team</h2>
+                    <ul class="section-3-list">
+                        <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
+                            <div class="team-container">
+                                <h3 class="section-3-list-title">Mark Guerrero</h3>
+                                <p class="section-3-list-description">Product Designer</p>
+                            </div>
+                        </li>
+                        <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
+                            <div class="team-container">
+                                <h3 class="section-3-list-title">Tom Ford</h3>
+                                <p class="section-3-list-description">Frontend Developer</p>
+                            </div>
+                        </li>
+                        <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
+                            <div class="team-container">
+                                <h3 class="section-3-list-title">Camila Garcia</h3>
+                                <p class="section-3-list-description">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
+                            <div class="team-container">
+                                <h3 class="section-3-list-title">Daniel Wilson</h3>
+                                <p class="section-3-list-description">UI Designer</p>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
+            <!--Section-4 Portfolio-->
+            <div class="container">
+                <section class="section-4">
+                    <h2 class="section-4-tittle">Our Portfolio</h2>
+                    <ul class="section-4-list">
+                        <li class="section-4-item">
+                            <img src="./images/app.jpg" alt="Banking App">
+                            <div class="section-4-list-container">
+                                <h3 class="section-4-list-title">Banking App</h3>
+                                <p class="list-description">App</p>
+                            </div>
+                        </li>
+                        <li class="section-4-item">
+                            <img src="./images/cashless.jpg" alt="Cashless Payment">
+                            <div class="section-4-list-container">
+                                <h3 class="section-4-list-title">Cashless Payment</h3>
+                                <p class="list-description">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="section-4-item">
+                            <img src="./images/meditation.jpg" alt="Meditation App">
+                            <div class="section-4-list-container">
+                                <h3 class="section-4-list-title">Meditation App</h3>
+                                <p class="list-description">App</p>
+                            </div>
+                        </li>
+                        <li class="section-4-item">
+                            <img src="./images/taxi.jpg" alt="Taxi Service">
+                            <div class="section-4-list-container">
+                                <h3 class="section-4-list-title">Taxi Service</h3>
+                                <p class="list-description">Marketing</p>
+                            </div>
+                        </li>
+                        <li class="section-4-item">
+                            <img src="./images/screen.jpg" alt="Screen Illustrations">
+                            <div class="section-4-list-container">
+                                <h3 class="section-4-list-title">Screen Illustrations</h3>
+                                <p class="list-description">Design</p>
+                            </div>
+                        </li>
+                        <li class="section-4-item">
+                            <img src="./images/courses.jpg" alt="Online Courses">
+                            <div class="section-4-list-container">
+                                <h3 class="section-4-list-title">Online Courses</h3>
+                                <p class="list-description">Marketing</p>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </main>
         <!-- Footer -->
-        <footer class="page-bottom">
-            <a class="logo" href="./index.html">WEB<span class="page-bottom-span">STUDIO</span></a>
-            <p class="page-bottom-description">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-        </footer>
-    </div>
+        <div class="container">
+            <footer class="page-bottom">
+                <a class="page-bottom-logo" href="./index.html">WEB<span class="page-bottom-span">STUDIO</span></a>
+                <p class="page-bottom-description">
+                    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
+            </footer>
+        </div>
 </body>
 </html>
