--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
         </header>
         <main>
             <!--Section HERO-->
-            <section class="section hero">
+            <section class="section-hero">
                 <div class="container">
                     <h1 class="title">Effective Solutions for Your Business</h1>
                     <button type="button" class="knob">Order Service</button>
                 </div>
             </section>
             <!--Section-2 Studio Descriptions--> 
-            <section class="section-2">
+            <section class="section-info">
                 <div class="container">
                     <h2 class="hidden">Tittle</h2>
-                    <ul class="section-2-list">
-                        <li class="section-2-list-item">
+                    <ul class="section-info-list">
+                        <li class="section-info-list-item">
                             <h3 class="list-title">Strategy</h3>
                             <p class="list-description">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                         </li>
-                        <li class="section-2-list-item">
+                        <li class="section-info-list-item">
                             <h3 class="list-title">Punctuality</h3>
                             <p class="list-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                         </li>
-                        <li class="section-2-list-item">
+                        <li class="section-info-list-item">
                             <h3 class="list-title">Diligence</h3>
                             <p class="list-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                         </li>
-                        <li class="section-2-list-item">
+                        <li class="section-info-list-item">
                             <h3 class="list-title">Technologies</h3>
                             <p class="list-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                         </li>
@@ -68,79 +68,79 @@
             <!--Section-3 "Our team"-->
             <section class="section-team">
                 <div class="container">
-                    <h2 class="section-3-tittle">Our Team</h2>
-                    <ul class="section-3-list">
+                    <h2 class="section-team-tittle">Our Team</h2>
+                    <ul class="section-team-list">
                         <li class="team"><img src="./images/mark.jpg" alt="product-designer" width="260">
                             <div class="team-container">
-                                <h3 class="section-3-list-title">Mark Guerrero</h3>
-                                <p class="section-3-list-description">Product Designer</p>
+                                <h3 class="section-team-list-title">Mark Guerrero</h3>
+                                <p class="section-team-list-description">Product Designer</p>
                             </div>
                         </li>
                         <li class="team"><img src="./images/tom.jpg" alt="frontend-developer" width="260">
                             <div class="team-container">
-                                <h3 class="section-3-list-title">Tom Ford</h3>
-                                <p class="section-3-list-description">Frontend Developer</p>
+                                <h3 class="section-team-list-title">Tom Ford</h3>
+                                <p class="section-team-list-description">Frontend Developer</p>
                             </div>
                         </li>
                         <li class="team"><img src="./images/camilla.jpg" alt="marketing" width="260">
                             <div class="team-container">
-                                <h3 class="section-3-list-title">Camila Garcia</h3>
-                                <p class="section-3-list-description">Marketing</p>
+                                <h3 class="section-team-list-title">Camila Garcia</h3>
+                                <p class="section-team-list-description">Marketing</p>
                             </div>
                         </li>
                         <li class="team"><img src="./images/daniel.jpg" alt="ui-designer" width="260">
                             <div class="team-container">
-                                <h3 class="section-3-list-title">Daniel Wilson</h3>
-                                <p class="section-3-list-description">UI Designer</p>
+                                <h3 class="section-team-list-title">Daniel Wilson</h3>
+                                <p class="section-team-list-description">UI Designer</p>
                             </div>
                         </li>
                     </ul>
                 </div>
             </section>
             <!--Section-4 Portfolio-->
-            <section class="section-4">
+            <section class="section-portfolio">
                 <div class="container">
-                    <h2 class="section-4-tittle">Our Portfolio</h2>
-                    <ul class="section-4-list">
-                        <li class="section-4-item">
+                    <h2 class="section-portfolio-tittle">Our Portfolio</h2>
+                    <ul class="section-portfolio-list">
+                        <li class="section-portfolio-item">
                             <img src="./images/app.jpg" alt="Banking App">
-                            <div class="section-4-list-container">
-                                <h3 class="section-4-list-title">Banking App</h3>
+                            <div class="section-portfolio-list-container">
+                                <h3 class="section-portfolio-list-title">Banking App</h3>
                                 <p class="list-description">App</p>
                             </div>
                         </li>
-                        <li class="section-4-item">
+                        <li class="section-portfolio-item">
                             <img src="./images/cashless.jpg" alt="Cashless Payment">
-                            <div class="section-4-list-container">
-                                <h3 class="section-4-list-title">Cashless Payment</h3>
+                            <div class="section-portfolio-list-container">
+                                <h3 class="section-portfolio-list-title">Cashless Payment</h3>
                                 <p class="list-description">Marketing</p>
                             </div>
                         </li>
-                        <li class="section-4-item">
+                        <li class="section-portfolio-item">
                             <img src="./images/meditation.jpg" alt="Meditation App">
-                            <div class="section-4-list-container">
-                                <h3 class="section-4-list-title">Meditation App</h3>
+                            <div class="section-portfolio-list-container">
+                                <h3 class="section-portfolio-list-title">Meditation App</h3>
                                 <p class="list-description">App</p>
                             </div>
                         </li>
-                        <li class="section-4-item">
+                        <li class="section-portfolio-item">
                             <img src="./images/taxi.jpg" alt="Taxi Service">
-                            <div class="section-4-list-container">
-                                <h3 class="section-4-list-title">Taxi Service</h3>
+                            <div class="section-portfolio-list-container">
+                                <h3 class="section-portfolio-list-title">Taxi Service</h3>
                                 <p class="list-description">Marketing</p>
                             </div>
                         </li>
-                        <li class="section-4-item">
+                        <li class="section-portfolio-item">
                             <img src="./images/screen.jpg" alt="Screen Illustrations">
-                            <div class="section-4-list-container">
-                                <h3 class="section-4-list-title">Screen Illustrations</h3>
+                            <div class="section-portfolio-list-container">
+                                <h3 class="section-portfolio-list-title">Screen Illustrations</h3>
                                 <p class="list-description">Design</p>
                             </div>
                         </li>
-                        <li class="section-4-item">
+                        <li class="section-portfolio-item">
                             <img src="./images/courses.jpg" alt="Online Courses">
-                            <div class="section-4-list-container">
-                                <h3 class="section-4-list-title">Online Courses</h3>
+                            <div class="section-portfolio-list-container">
+                                <h3 class="section-portfolio-list-title">Online Courses</h3>
                                 <p class="list-description">Marketing</p>
                             </div>
                         </li>
